baml_language/crates/baml_tests/snapshots/compiles/retry_policy/baml_tests__compiles__retry_policy__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 17606
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
