baml_language/crates/baml_tests/snapshots/compiles/retry_policy/baml_tests__compiles__retry_policy__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.MyRetry
    call $init_let_1
    store_global user.MyClient
    load_const null
    return
}

function user.MyClient$new() -> null {
    load_const "MyClient"
    load_const "openai"
    load_const "gpt-4"
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_const null
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type string
    alloc_map 0
    load_type string
    load_type unknown
    alloc_map 0
    init_instance baml.llm.PrimitiveClientOptions .model, .base_url, .allowed_role_metadata, .finish_reason_allow_list, .finish_reason_deny_list, .supports_streaming, .default_role, .allowed_roles, .remap_roles, .api_key, .provider_options, .media_url_handler, .headers, .query_params, .request_body
    init_instance baml.llm.PrimitiveClient .name, .provider, .options
    return
}
